--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "styled-components": "^4.4.1",
+    "styled-system": "^5.1.4",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -50,6 +51,7 @@
     "@storybook/react": "^5.2.8",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^4.4.0",
     "husky": "^3.1.0"
   },
   "husky": {
