--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@storybook/react": "^5.2.8",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.0",
     "husky": "^3.1.0"
   },
