--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/styled-system": "^5.1.4",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
     "react": "^16.12.0",
@@ -53,6 +54,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "husky": "^3.1.0"
   },
   "husky": {
