--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^12.0.0",
     "@types/styled-system": "^5.1.4",
     "apollo-boost": "^0.4.4",
+    "google-map-react": "^1.1.5",
+    "google-maps-react": "^2.0.2",
     "graphql": "^14.5.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -51,6 +53,8 @@
     "@storybook/addon-links": "^5.2.8",
     "@storybook/addons": "^5.2.8",
     "@storybook/react": "^5.2.8",
+    "@types/google-map-react": "^1.1.3",
+    "@types/google-maps-react": "^2.0.3",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
