--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/styled-system": "^5.1.4",
     "apollo-boost": "^0.4.4",
+    "axios": "^0.19.0",
     "google-map-react": "^1.1.5",
     "google-maps-react": "^2.0.2",
     "graphql": "^14.5.8",
